fix header spacing problem

--- a/css/patient_dashboard.css
+++ b/css/patient_dashboard.css
@@ -1,11 +1,6 @@
 /*********************************/
 /*NAVIGATION*/
 /*********************************/
-.header {
-  display: flex;
-  gap: 4.5rem;
-}
-
 
 /*********************************/
 /*MAIN*/
@@ -32,7 +27,7 @@ h1 {
 }
 
 .main-nav-left {
-  align-self:flex-start;
+  align-self: flex-start;
 }
 
 .main-nav-left-list {
@@ -102,7 +97,6 @@ h1 {
   overflow: hidden;
 }
 
-
 .blood-box::after {
   content: "Finish";
   position: absolute;
@@ -126,7 +120,6 @@ h1 {
 
 .record-box:hover > p {
   font-size: 2.2rem;
-  
 }
 
 /*********************************/
@@ -166,7 +159,7 @@ h1 {
 }
 
 .cross-button:hover .cross-button-icon {
-  color:orange;
+  color: orange;
 }
 
 .comments-box > p {
@@ -177,8 +170,7 @@ h1 {
 /*********************************/
 /*Responsive*/
 /*********************************/
-@media (max-width: 35rem)  {
-
+@media (max-width: 35rem) {
   .main {
     display: flex;
     flex-direction: column;
@@ -207,13 +199,13 @@ h1 {
     top: 88%;
     width: 100%;
     align-items: center;
-    background-color: #F1F1F1;
+    background-color: #f1f1f1;
     padding: 2rem;
   }
   .main-nav-left-shade {
-    display:block;
+    display: block;
     position: absolute;
-    background-color: rgb(125,188,87,50%);
+    background-color: rgb(125, 188, 87, 50%);
     width: 10rem;
     height: 10rem;
     bottom: 1rem;
@@ -225,11 +217,11 @@ h1 {
     flex-direction: column;
     width: 9rem;
   }
-  .main-nav-left li .main-nav-link{
+  .main-nav-left li .main-nav-link {
     font-size: 1rem;
     font-weight: bold;
   }
-  
+
   .main-nav-left .home-li {
     margin-top: -0.8rem;
     margin-left: 0;
@@ -241,7 +233,6 @@ h1 {
     display: flex;
     font-size: 2rem;
     gap: 2rem;
-    
   }
   footer {
     display: none;
